--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -6,60 +6,17 @@
     <link rel="stylesheet" href="privacy_policy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="about_us.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="contact_us.css">
+
+</head>
   <body>
     <header>
-           <nav class="navbar navbar-expand-lg">
-               <div class="container-fluid">
-                   <a class="navbar-brand mx-2" href="home.html">
-                       <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
-                   </a>
-                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                       <span class="navbar-toggler-icon"></span>
-                   </button>
-
-                   <div class="collapse navbar-collapse menu-drop" id="navbarNavDropdown">
-                       <ul class="navbar-nav me-auto">
-                           <li class="nav-item">
-                               <a class="nav-link active link-light" aria-current="page" href="home.html">Home</a>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link link-light" href="crypto.html">Crypto</a>
-                           </li>
-                           <li class="nav-item dropdown">
-                               <a class="nav-link dropdown-toggle link-light" href="about_us.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                   About Us
-                               </a>
-                               <ul class="dropdown-menu" style="background-color:#243945;">
-                                   <li><a class="dropdown-item" href="about_us.html">About</a></li>
-                                   <li><a class="dropdown-item" href="basicinfo.html">Basic Informations</a></li>
-                                   <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                                   <li><a class="dropdown-item" href="employment.html">Employment</a></li>
-                               </ul>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link link-light" href="contact_us.html">Contact Us</a>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link link-light" href="help.html">Help</a>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link link-light" href="account.html" style="visibility:hidden;">Account</a>
-                           </li>
-                       </ul>
-                       <div class="">
-                           <ul class="navbar-nav">
-                               <li class="nav-item">
-                                   <a href="login.html" class="nav-link link-light">Log In</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a href="signup.html" class="nav-link link-light">Sign Up</a>
-                               </li>
-                           </ul>
-                       </div>
-                   </div>
-               </div>
-           </nav>
+        <div class="footer-content">
+            <a href="home.html" ><i class="fa fa-home" id="home"></i></a>
+        </div>
+        
        </header>
        <div class="privacy_policy container">
 
