--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="privacy_policy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/privacy_policy.css">
 </head>
   <body>
-    <header>
-        <div class="footer-content my-4">
-            <a href="home.html" ><i class="fa fa-home" id="home"></i></a>
-        </div>
-
-       </header>
+      <header>
+          <nav class="navbar navbar-expand-lg mx-auto container mb-3">
+              <div class="container-fluid">
+                    <a class="navbar-brand mx-auto" href="home.html">
+                        <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
+                    </a>
+              </div>
+          </nav>
+      </header>
        <div class="privacy_policy container">
 
 
