--- a/sites/privacy_policy.html
+++ b/sites/privacy_policy.html
@@ -11,7 +11,7 @@
       <header>
           <nav class="navbar navbar-expand-lg mx-auto container mb-3">
               <div class="container-fluid">
-                    <a class="navbar-brand mx-auto" href="home.html">
+                    <a class="navbar-brand mx-auto" href="signup.html">
                         <img src="../images/small_logo.png" alt="Logo" height="40px" width="45px" class="rounded">
                     </a>
               </div>
